--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -34,11 +34,8 @@
                     keys = keys + this.value + ',';});
             $.post('/pr/register',{'keys': keys});
 
-            message = 'registered';
+            message = 'You have successfully registered forms';
             load('/hr');
-
-
-
 
         })
     })
