--- a/application/templates/api.hr.html
+++ b/application/templates/api.hr.html
@@ -40,7 +40,7 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/hr">hr</a>/<a>new period</a>/
+<a href="/#/hr">Home</a> > <a>New period</a>
 {% endblock %}
 {% block content %}
     <h1>Create New Performance Review Period:</h1>
