--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -9,7 +9,7 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/hr">hr</a>/<a>settings</a>/
+<a href="/#/hr">Home</a> > <a>Settings</a>
 {% endblock %}
 {% block content %}
         <div id="events">
