--- a/application/templates/summary_report.html
+++ b/application/templates/summary_report.html
@@ -1,6 +1,6 @@
 {% extends "_api_base.html" %}
 {% block breadcrumps %}
-<a href="/#/hr">hr</a>/<a>summary report</a>/
+<a href="/#/hr">Home</a> > <a>Summary report</a>
 {% endblock %}
 {% block content %}
 
