--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -23,7 +23,12 @@
     {% block script %}
     <script type="text/javascript">
     $(document).ready(function(){
-        load('/{{current_role}}');
+        var current_role = '{{current_role}}';
+        if (current_role == 'manager'){
+            load('/manager/get/all')
+        }
+        else{
+        load('/' + current_role);}
 
     });
 
