--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -79,12 +79,14 @@ $(document).ready(function(){
     flag = true;
     send_request();
     lock_form();
-})
+});
 
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/manager">manager</a>/<a>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</a>/
+<a href="#" onclick="return false">Home</a> > <a href="/#/manager/get/all">PR</a> >
+<a href="/#/manager/get/{{form.pr.employee.dept.name}}">{{form.pr.employee.dept.name}}</a> >
+<a>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</a>
 {% endblock %}
 {% block content %}
 
