--- a/application/templates/detailed_report.html
+++ b/application/templates/detailed_report.html
@@ -1,6 +1,6 @@
 {% extends "_api_base.html" %}
 {% block breadcrumps %}
-<a href="/#/hr">hr</a>/<a>detailed report</a>/
+<a href="/#/hr">Home</a> > <a>Detailed report</a>
 {% endblock %}
 {% block content %}
 
