--- a/application/templates/api.readonly_eaf.html
+++ b/application/templates/api.readonly_eaf.html
@@ -11,7 +11,7 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="employee">Home</a> > <a>Self form</a>
+<a href="/#/employee">Home</a> > <a>Self form</a>
 {% endblock %}
 {% block content %}
 <div id="info">
