--- a/application/templates/api.employee_form.html
+++ b/application/templates/api.employee_form.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block breadcrumps %}
-    <a href="employee">Home</a> > <a>Self form</a>
+    <a href="/#/employee">Home</a> > <a>Self form</a>
 {% endblock %}
 {% block content %}
 <h1>Employee form</h1>
