--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -46,6 +46,8 @@
 {% endblock %}
 {% block content %}
 
+        <div><a href="/#/hr/get/projects">Projects</a></div>
+
     {% for period in periods %}
 
         <h2>{{period.description}}</h2>
