--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -84,7 +84,7 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="#" onclick="return false">Home</a> > <a href="/#/manager/get/all">PR</a> >
+<a href="/#/manager/home">Home</a> > <a href="/#/manager/get/all">PR</a> >
 <a href="/#/manager/get/{{form.pr.employee.dept.name}}">{{form.pr.employee.dept.name}}</a> >
 <a>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</a>
 {% endblock %}
