--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<a href="/#/manager/settings">settings</a>
 <!-- show current PR link (if open) -->
 {% if departments or projects %}
 <h1><a href="#/manager/get/all">Current PR</a></h1>
