--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -24,11 +24,11 @@
     <script type="text/javascript">
     $(document).ready(function(){
         var current_role = '{{current_role}}';
-        if (current_role == 'manager'){
-            load('/manager/home')
-        }
-        else{
-        load('/' + current_role);}
+//        if (current_role == 'manager'){
+            load_role(current_role);
+//        }
+//        else{
+//        load('/' + current_role);}
 
     });
 
@@ -51,7 +51,9 @@
                         {% endfor %}
                     </select>
                 </td>
-                <td id="settings" style="display: none;"><a href="#/hr/settings">settings</a></td>
+                <td id="settings" style="display: none;">
+                    <!--<a href="#/hr/settings">settings</a>-->
+                </td>
                  <td><a href="/logout">Logout</a></td>
             </tr>
         </table>
