--- a/application/templates/api.readonly_eaf.html
+++ b/application/templates/api.readonly_eaf.html
@@ -11,7 +11,8 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/employee">Home</a> > <a>Self form</a>
+<a href="/#/employee">Home</a>&nbsp;&gt;&nbsp;
+<span class="breadcrump breadcrump_current">Self form</span>
 {% endblock %}
 {% block content %}
 <div id="info">
