--- a/application/templates/detailed_report.html
+++ b/application/templates/detailed_report.html
@@ -1,6 +1,7 @@
 {% extends "_api_base.html" %}
 {% block breadcrumps %}
-<a href="/#/hr">Home</a> > <a>Detailed report</a>
+<a href="/#/hr">Home</a>&nbsp;&gt;&nbsp;
+<span class="breadcrump breadcrump_current">Detailed report</span>
 {% endblock %}
 {% block content %}
 
