--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -42,7 +42,7 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a>Home</a> >
+<span class="breadcrump breadcrump_current">Home</span>
 {% endblock %}
 {% block content %}
 
