--- a/application/templates/manager.settings.html
+++ b/application/templates/manager.settings.html
@@ -17,7 +17,10 @@
     })
 </script>
 {% endblock %}
-
+{% block breadcrumps %}
+<a href="/#/manager/home">Home</a>&nbsp;&gt;&nbsp;
+<span class="breadcrump breadcrump_current">Settings</span>
+{% endblock %}
 {% block content %}
 <h1>Performance Review Settings</h1>
 <div>
