--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -86,7 +86,8 @@
         </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/hr" >Home</a>&nbsp;&gt;&nbsp;<a>Projects</a>
+<a href="/#/hr" >Home</a>&nbsp;&gt;&nbsp;
+<span class="breadcrump breadcrump_current">Projects</span>
 {% endblock %}
 {% block content %}
 <div id="attaching-form" title="Attach employee to project">
