--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -9,7 +9,8 @@
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/hr">Home</a> > <a>Settings</a>
+<a href="/#/hr">Home</a>&nbsp;&gt;&nbsp;
+<a>Settings</a>
 {% endblock %}
 {% block content %}
         <div id="events">
