--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -78,9 +78,10 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 {% block breadcrumps %}
-<a href="/#/manager/home">Home</a> > <a href="/#/manager/get/all">PR</a> >
-<a href="/#/manager/get/{{form.pr.employee.dept.name}}">{{form.pr.employee.dept.name}}</a> >
-<a>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</a>
+<a href="/#/manager/home">Home</a>&nbsp;&gt;&nbsp;
+<a href="/#/manager/get/all">PR</a>&nbsp;&gt;&nbsp;
+<a href="/#/manager/get/{{form.pr.employee.dept.name}}">{{form.pr.employee.dept.name}}</a>&nbsp;&gt;&nbsp;
+<span class="breadcrump breadcrump_current">{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</span>
 {% endblock %}
 {% block content %}
 
