--- a/application/templates/api.employee.html
+++ b/application/templates/api.employee.html
@@ -5,10 +5,20 @@
 {% endblock %}
 
 {% block content %}
-    {% if pr.employee_form %}
-    <a href="/#/employee/pr/get/employee/{{pr.key}}">load self AF</a>
+    {% if pr %}
+        {% if pr.employee_form %}
+        <a href="/#/employee/pr/get/employee/{{pr.key}}">load self AF</a>
+        {% else %}
+        <a href="/#/employee/pr/add/employee/{{pr.employee.key}}">create self AF</a>
+        {% endif %}
     {% else %}
-    <a href="/#/employee/pr/add/employee/{{pr.employee.key}}">create self AF</a>
-    {% endif %}
+    <p>Upload your PR form</p>
+    <div>
+            <form action="{{upload_url}}" method="POST" enctype="multipart/form-data">
+                <input type='hidden' name='key' value={{user.key}}>
+                <input type="file" name="file"><br>
+                <input type="submit" name="submit" value="attach">
+            </form>
+    </div>
+     {% endif %}
 {% endblock %}
-  
