--- a/application/templates/summary_report.html
+++ b/application/templates/summary_report.html
@@ -1,6 +1,6 @@
 {% extends "_api_base.html" %}
 {% block breadcrumps %}
-<a href="/#/hr">Home</a>nbsp;&gt;&nbsp;
+<a href="/#/hr">Home</a>&nbsp;&gt;&nbsp;
 <span class="breadcrump breadcrump_current">Summary report</span>
 
 {% endblock %}
