--- a/application/templates/api.manager.home.html
+++ b/application/templates/api.manager.home.html
@@ -8,6 +8,7 @@
 {% block content %}
 <!-- show current PR link (if open) -->
 {% if departments or projects %}
+    {% if current_pr %}
 <h1><a href="#/manager/get/all">Current PR</a></h1>
 <ul class="pr_current">
     {% for department in departments %}
@@ -17,6 +18,7 @@
     <li><a href="#/manager/get/{{project.name}}">Project:&nbsp;{{project.name}}</a></li>
     {% endfor %}
 </ul>
+        {% endif %}
 {% endif %}
 <!-- show archived PRs link -->
 {% if prs %}
